[gd_scene load_steps=5 format=3 uid="uid://wilderness_screen"]

[ext_resource type="Script" path="res://src/ui/WildernessScreen.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://top_hud" path="res://src/ui/TopHUD.tscn" id="2_hud"]
[ext_resource type="PackedScene" uid="uid://task_list_hud" path="res://src/ui/TaskListHUD.tscn" id="3_task"]
[ext_resource type="PackedScene" uid="uid://world_map_ui" path="res://src/ui/WorldMapUI.tscn" id="4_map"]

[node name="WildernessScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.2, 0.133333, 1)

[node name="TopHUD" parent="." instance=ExtResource("2_hud")]
layout_mode = 1

[node name="TaskListHUD" parent="." instance=ExtResource("3_task")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wilderness"
horizontal_alignment = 1

[node name="ResourceList" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionStatus" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="MapButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "World Map"

[node name="WorldMapUI" parent="." instance=ExtResource("4_map")]
visible = false
layout_mode = 1